kubernetes/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rca-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: staging.company.com
      http:
        paths:
          - path: /my-svc/rca(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rca-app
                port:
                  name: http
